The burger menu is being finalized

--- a/portfolio.html
+++ b/portfolio.html
@@ -437,29 +437,35 @@
 
       <nav class="menu__container-nav">
         <ul class="menu__container-list">
-          <li class="menu__container-item"><a href="./index.html" class="link">Студія</a></li>
           <li class="menu__container-item">
-            <a href="./portfolio.html" class="link">Портфоліо</a>
+            <a href="./index.html" class="menu__container-link link">Студія</a>
           </li>
-          <li class="menu__container-item"><a href="" class="link">Контакти</a></li>
+          <li class="menu__container-item">
+            <a href="./portfolio.html" class="menu__container-link link">Портфоліо</a>
+          </li>
+          <li class="menu__container-item">
+            <a href="" class="menu__container-link link">Контакти</a>
+          </li>
         </ul>
       </nav>
       <ul class="menu__contacts">
+        <li class="menu__contacts-list">
+          <a href="tel:+380961111111" class="menu__contacts-link link">+38 096 111 11 11</a>
+        </li>
         <li class="menu__contacts-list">
           <a href="mailto:info@devstudio.com" class="menu__contacts-link link"
             >info@devstudio.com</a
           >
         </li>
-        <li class="menu__contacts-list">
-          <a href="tel:+380961111111" class="menu__contacts-link link">+38 096 111 11 11</a>
-        </li>
       </ul>
       <div class="menu__socnet">
         <ul class="menu__socnet-list">
-          <li class="menu__socnet-item">Instagram</li>
-          <li class="menu__socnet-item">Twitter</li>
-          <li class="menu__socnet-item">Facebook</li>
-          <li class="menu__socnet-item">LinkedIn</li>
+          <li class="menu__socnet-item">
+            <a href="#" class="menu__socnet-link link">Instagram</a>
+          </li>
+          <li class="menu__socnet-item"><a href="#" class="menu__socnet-link link">Twitter</a></li>
+          <li class="menu__socnet-item"><a href="#" class="menu__socnet-link link">Facebook</a></li>
+          <li class="menu__socnet-item"><a href="#" class="menu__socnet-link link">LinkedIn</a></li>
         </ul>
       </div>
     </div>
