--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
 
-    <link rel="stylesheet" href="./dist/css/main.min.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <!-------- BODY -------->
