--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
 
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./dist/css/main.min.css" />
 
     <title>Portfolio</title>
   </head>
@@ -453,7 +453,7 @@
           <a href="tel:+380961111111" class="menu__contacts-link link">+38 096 111 11 11</a>
         </li>
         <li class="menu__contacts-list">
-          <a href="mailto:info@devstudio.com" class="menu__contacts-link link"
+          <a href="mailto:info@devstudio.com" class="menu__contacts-link menu__contacts-mail link"
             >info@devstudio.com</a
           >
         </li>
