--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
 
-    <link rel="stylesheet" href="./dist/css/main.min.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
 
     <title>Portfolio</title>
   </head>
@@ -108,10 +108,18 @@
               <a href="#" class="work__link link">
                 <div class="work__cover">
                   <img
-                    src="images/technocryak.jpg"
+                    srcset="
+                      ./images/technocryak-450@1x.jpg 450w,
+                      ./images/technocryak-900@2x.jpg 900w,
+                      ./images/technocryak-354@1x.jpg 354w,
+                      ./images/technocryak-708@2x.jpg 708w,
+                      ./images/technocryak-370@1x.jpg 370w,
+                      ./images/technocryak-740@2x.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/technocryak-370@1x.jpg"
                     alt="a laptop with an image of the technocryak website"
                     class="work__poster"
-                    width="370"
                   />
                   <div class="work__covertext">
                     <p class="work__text">
@@ -132,10 +140,18 @@
               <a href="#" class="work__link link">
                 <div class="work__cover">
                   <img
-                    src="images/poster.jpg"
+                    srcset="
+                      ./images/poster-450@1x.jpg 450w,
+                      ./images/poster-900@2x.jpg 900w,
+                      ./images/poster-354@1x.jpg 354w,
+                      ./images/poster-708@2x.jpg 708w,
+                      ./images/poster-370@1x.jpg 370w,
+                      ./images/poster-740@2x.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/poster-370@1x.jpg"
                     alt="poster with two basketball players"
                     class="work__poster"
-                    width="370"
                   />
                   <div class="work__covertext">
                     <p class="work__text">
@@ -156,10 +172,18 @@
               <a href="#" class="work__link link">
                 <div class="work__cover">
                   <img
-                    src="images/restaurant.jpg"
+                    srcset="
+                      ./images/restaurant-450@1x.jpg 450w,
+                      ./images/restaurant-900@2x.jpg 900w,
+                      ./images/restaurant-354@1x.jpg 354w,
+                      ./images/restaurant-708@2x.jpg 708w,
+                      ./images/restaurant-370@1x.jpg 370w,
+                      ./images/restaurant-740@2x.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/restaurant-370@1x.jpg"
                     alt="restaurant logo with salmon on the background"
                     class="work__poster"
-                    width="370"
                   />
                   <div class="work__covertext">
                     <p class="work__text">
@@ -179,10 +203,18 @@
               <a href="#" class="work__link link">
                 <div class="work__cover">
                   <img
-                    src="images/prime.jpg"
+                    srcset="
+                      ./images/prime-450@1x.jpg 450w,
+                      ./images/prime-900@2x.jpg 900w,
+                      ./images/prime-354@1x.jpg 354w,
+                      ./images/prime-708@2x.jpg 708w,
+                      ./images/prime-370@1x.jpg 370w,
+                      ./images/prime-740@2x.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/prime-370@1x.jpg"
                     alt="black headphones are shown"
                     class="work__poster"
-                    width="370"
                   />
                   <div class="work__covertext">
                     <p class="work__text">
@@ -202,10 +234,18 @@
               <a href="#" class="work__link link">
                 <div class="work__cover">
                   <img
-                    src="images/boxes.jpg"
+                    srcset="
+                      ./images/boxes-450@1x.jpg 450w,
+                      ./images/boxes-900@2x.jpg 900w,
+                      ./images/boxes-354@1x.jpg 354w,
+                      ./images/boxes-708@2x.jpg 708w,
+                      ./images/boxes-370@1x.jpg 370w,
+                      ./images/boxes-740@2x.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/boxes-370@1x.jpg"
                     alt="white and gray boxes"
                     class="work__poster"
-                    width="370"
                   />
                   <div class="work__covertext">
                     <p class="work__text">
@@ -225,10 +265,18 @@
               <a href="#" class="work__link link">
                 <div class="work__cover">
                   <img
-                    src="images/inspiration.jpg"
+                    srcset="
+                      ./images/inspiration-450@1x.jpg 450w,
+                      ./images/inspiration-900@2x.jpg 900w,
+                      ./images/inspiration-354@1x.jpg 354w,
+                      ./images/inspiration-708@2x.jpg 708w,
+                      ./images/inspiration-370@1x.jpg 370w,
+                      ./images/inspiration-740@2x.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/inspiration-370@1x.jpg"
                     alt="imac with website image"
                     class="work__poster"
-                    width="370"
                   />
                   <div class="work__covertext">
                     <p class="work__text">
@@ -248,10 +296,18 @@
               <a href="#" class="work__link link">
                 <div class="work__cover">
                   <img
-                    src="images/limited.jpg"
+                    srcset="
+                      ./images/limited-450@1x.jpg 450w,
+                      ./images/limited-900@2x.jpg 900w,
+                      ./images/limited-354@1x.jpg 354w,
+                      ./images/limited-708@2x.jpg 708w,
+                      ./images/limited-370@1x.jpg 370w,
+                      ./images/limited-740@2x.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/limited-370@1x.jpg"
                     alt="the front page of a glossy magazine"
                     class="work__poster"
-                    width="370"
                   />
                   <div class="work__covertext">
                     <p class="work__text">
@@ -271,10 +327,18 @@
               <a href="#" class="work__link link">
                 <div class="work__cover">
                   <img
-                    src="images/lab.jpg"
+                    srcset="
+                      ./images/lab-450@1x.jpg 450w,
+                      ./images/lab-900@2x.jpg 900w,
+                      ./images/lab-354@1x.jpg 354w,
+                      ./images/lab-708@2x.jpg 708w,
+                      ./images/lab-370@1x.jpg 370w,
+                      ./images/lab-740@2x.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/lab-370@1x.jpg"
                     alt="paper tag with an inscription"
                     class="work__poster"
-                    width="370"
                   />
                   <div class="work__covertext">
                     <p class="work__text">
@@ -294,10 +358,18 @@
               <a href="#" class="work__link link">
                 <div class="work__cover">
                   <img
-                    src="images/growing.jpg"
+                    srcset="
+                      ./images/growing-450@1x.jpg 450w,
+                      ./images/growing-900@2x.jpg 900w,
+                      ./images/growing-354@1x.jpg 354w,
+                      ./images/growing-708@2x.jpg 708w,
+                      ./images/growing-370@1x.jpg 370w,
+                      ./images/growing-740@2x.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/growing-370@1x.jpg"
                     alt="laptop and typing hands"
                     class="work__poster"
-                    width="370"
                   />
                   <div class="work__covertext">
                     <p class="work__text">
