Finalizes html and css code
- some elements of the burger menu;
- section of buttons in the selection of works from the portfolio

--- a/index.html
+++ b/index.html
@@ -773,7 +773,9 @@
       <nav class="menu__container-nav">
         <ul class="menu__container-list">
           <li class="menu__container-item">
-            <a href="./index.html" class="menu__container-link link">Студія</a>
+            <a href="./index.html" class="menu__container-link menu__container-link--current link"
+              >Студія</a
+            >
           </li>
           <li class="menu__container-item">
             <a href="./portfolio.html" class="menu__container-link link">Портфоліо</a>
