--- a/portfolio.html
+++ b/portfolio.html
@@ -513,7 +513,11 @@
             <a href="./index.html" class="menu__container-link link">Студія</a>
           </li>
           <li class="menu__container-item">
-            <a href="./portfolio.html" class="menu__container-link link">Портфоліо</a>
+            <a
+              href="./portfolio.html"
+              class="menu__container-link menu__container-link--current link"
+              >Портфоліо</a
+            >
           </li>
           <li class="menu__container-item">
             <a href="" class="menu__container-link link">Контакти</a>
