--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
-              info@devstudio.com
-            </a>
+              info@devstudio.com</a
+            >
           </li>
           <li class="contacts__list">
             <a href="tel:+380961111111" class="contacts__link link"
